extra example of function before dropping column headers

--- a/index.html
+++ b/index.html
@@ -264,8 +264,9 @@ URL: https://code.google.com/p/io-2012-slides
     <article ><p><mathjax>$tl \rightarrow bool$</mathjax></p>
 <ul class="build">
 <li>For each element <mathjax>$l$</mathjax> in <mathjax>$tl$</mathjax>, pick one element <mathjax>$b$</mathjax> in <mathjax>$bool$</mathjax></li>
-<li>example - <mathjax>${(red, false), (yellow, true), (green, true)}$</mathjax></li>
-<li><mathjax>$(false, true, true)$</mathjax></li>
+<li>ex: <mathjax>$\{(red, false), (yellow, true), (green, true)\}$</mathjax></li>
+<li>ex: <mathjax>$\{(red, false), (yellow, false), (green, true)\}$</mathjax></li>
+<li><mathjax>$\{(false, true, true), (false, false, true)\}$</mathjax></li>
 <li><mathjax>$(tl \rightarrow bool) = (bool, bool, bool) = 2 * 2 * 2$</mathjax></li>
 </ul></article>
  
@@ -280,8 +281,9 @@ URL: https://code.google.com/p/io-2012-slides
     <article ><p><mathjax>$bool \rightarrow tl$</mathjax></p>
 <ul class="build">
 <li>For each element <mathjax>$b$</mathjax> in <mathjax>$bool$</mathjax>, pick one element <mathjax>$l$</mathjax> in <mathjax>$tl$</mathjax></li>
-<li>example - <mathjax>${(false, red), (true, yellow)}$</mathjax></li>
-<li><mathjax>$(red, yellow)$</mathjax></li>
+<li>ex: <mathjax>$\{(false, red), (true, yellow)\}$</mathjax></li>
+<li>ex: <mathjax>$\{(false, yellow), (true, green)\}$</mathjax></li>
+<li><mathjax>$\{(red, yellow), (yellow, green)\}$</mathjax></li>
 <li><mathjax>$(bool \rightarrow tl) = (tl, tl) = 3 * 3$</mathjax></li>
 </ul></article>
  
