notes for looking over shipped/shipping code

--- a/index.html
+++ b/index.html
@@ -366,7 +366,8 @@ correctly from the very first run.</p></article>
       <h2>Bonus examples</h2>
       <h3></h3>
     </hgroup>
-    <article ><p>Lexical scope in classes, adjusted algebra</p></article>
+    <article ><p>Actual code, Datadog instrumentation and/or declarative connection
+Lexical scope in classes, adjusted algebra</p></article>
  
 </slide>
 
