work agenda to build hype, start adding ad-libs to slides to keep conciseness re time

--- a/index.html
+++ b/index.html
@@ -77,14 +77,9 @@ URL: https://code.google.com/p/io-2012-slides
       <h3></h3>
     </hgroup>
     <article ><ul>
-<li>Motivation</li>
-<li>Types as Sets</li>
-<li>Tuples</li>
-<li>Functions</li>
-<li>Classes</li>
-<li>Shrinking Sets, forgetting on purpose</li>
-<li>Examples, how many ways can we implement this?</li>
-<li>There's more - Addition? Algebra? Factorization and Reduction?</li>
+<li>Counting classes (analysis)</li>
+<li>Reducing counts (practice)</li>
+<li>If there's time - production code, addition, algebraic refactoring</li>
 </ul></article>
  
 </slide>
@@ -97,7 +92,8 @@ URL: https://code.google.com/p/io-2012-slides
     </hgroup>
     <article ><p>Typechecker looks at code without running</p>
 <p>Software runs many times, what you know before running, you know <em>every</em> time it runs</p>
-<p>How much can you really know before running?</p></article>
+<p>How much can you really know before running?</p>
+<p>Just like how much tests can do for you, depends on how you write your code.</p></article>
  
 </slide>
 
