better types for bad impl

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ class Intersection:
 
   def should_change(self: Intersection) -> bool: ...
   def change_light(self: Intersection) -> Intersection: ...
-  def arrive(self: Intersection, cars: int) -> Intersection: ...
+  def direct_traffic(self: Intersection, cars: int, dir: Dir) -> Intersection: ...
 </pre></article>
  
 </slide>
